<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_MechPump" Id="{b87a021b-d769-41f1-b8d2-403538ace2c3}">
    <Declaration><![CDATA[TYPE ST_MechPump :
STRUCT
	//Simulation Parameters
	rMRE	:	REAL; // Mass Removal Efficiency: should be a number less than 1.
	rBasePress	:	REAL;
	rLoad	:	REAL;
	iMaxSpd	:	INT;
	rMaxLoad	:	REAL;
	tonSpd	:	TON;
	tonTemp	:	TON;
	tonOvrLd	:	TON;
	xCooling:	BOOL := FALSE; // hook the cooling active signal here
	srError	:	SR;
	rtResetErr : R_TRIG;
	
	
	//Discrete controls
	i_xIlk	:	BOOL;
	i_xRun	:	BOOL;
	
	//Discrete readbacks
	q_xAtSpd	:	BOOL;
	q_xErr	:	BOOL;
	q_xStart	:	BOOL;
	
	//Other Readbacks
	q_iPower	:	INT;
	q_iSpeed	:	INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>