<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_RoughPump_Demo" Id="{57fe3225-4496-4f37-8b6a-6e111d9b2eeb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_RoughPump_Demo
VAR_INPUT
	i_xRun	:	BOOL := FALSE;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stVolInlet	:	ST_Volume;
	stPump	:	ST_MechPump;
END_VAR
VAR
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//run without turning on
stVolInlet.rPressure := MAX( stVolInlet.rPressure*(1-stPump.rMRE/stVolInlet.rVolume), stPump.rBasePress);]]></ST>
    </Implementation>
    <LineIds Name="FB_RoughPump_Demo">
      <LineId Id="21" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>